kubernetes/longhorn/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: longhorn-system
spec:
  rules:
    - host: longhorn.k8s.bnet.lan
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
